correction navbar behind image

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -6,6 +6,7 @@
   height: 4.5rem;
   display: flex;
   justify-content: center;
+  z-index: 9;
 }
 .Navbar img {
   height: 70%;
